<resources>
    <string name="app_name">WhatsApp</string>

    <!--SignUp Activity-->
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signup_with_phone">SignUp With Phone</string>

    <!--Login Activity-->
    <string name="sign_in">Sign In</string>
    <string name="click_for_signup">Click For SignUp</string>

    <!--Menu Item-->
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Chats Activity-->
    <string name="enter_your_message">Enter Your Message</string>
    <string name="please_enter_message">Please Enter Message</string>

    <!--Item Sender Layout-->
    <string name="_12_00_pm">12:00 PM</string>
    <string name="message">Message</string>
    <string name="group_chats">Group Chats</string>

    <!--Settings Activity-->
    <string name="enter_your_name">Enter Your Name</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="profile_updated">Profile Updated</string>
</resources>